# vsomeip-openni2

./: .gitignore  CMakeLists.txt  README.md
camera_test/: CMakeLists.txt
camera_test/src/: grabber.cpp  grabber.hpp  main.cpp
cmake/Modules/: FindOpenCV.cmake
scripts/: README.md  bootup_test.py  framerate_test.py
scripts/payload_test/: ping_pi_to_pitx.txt  ping_pitx_to_pi.txt  tcp_window_size.txt
scripts/readings/: 0.txt  1.txt  2.txt  3.txt  4.txt  measurement1.csv
src/: async_udp_echo_server.cpp  client-camera.cpp  client-camera.cpp.save  client-example.cpp  client_config.json  grabber.cpp  grabber.hpp  service-camera.cpp  service-example.cpp  service_config.json  service_config_udp.json  service_tcp_config.json  service_udp_config.json  udp_client.cpp
